--- a/home.html
+++ b/home.html
@@ -62,4 +62,23 @@
     
     
 </body>
+
+<footer>
+    <div class="footer-content">
+        <div class="footer-section about">
+            <h2>Sobre Nós</h2>
+            <p>Somos a Bridge Assessoria Digital, especialistas em trazer o mundo digital para o seu negócio. Conte conosco para transformar sua presença online.</p>
+        </div>
+
+        <div class="footer-section contact">
+            <h2>Contato</h2>
+            <p>Email: info@bridgeassessoria.com<br>Telefone: (11) 1234-5678</p>
+        </div>
+    </div>
+
+    <div class="footer-bottom">
+        <p>&copy; 2024 Bridge Assessoria Digital | Desenvolvido por Mateus Lima </p>
+    </div>
+</footer>
+
 </html>
