--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bridge Assessoria</title>
+    <link rel="icon" href="imagens/favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="background-body">
@@ -61,7 +62,7 @@
     </section>
     
     
-</body>
+
 
 <footer>
     <div class="footer-content">
@@ -81,4 +82,5 @@
     </div>
 </footer>
 
+</body>
 </html>
