--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 
     <!-- Navegação para Mobile -->
     <div class="mobile-nav">
-        <img class="logo" src="imagens/logo-bridge.png" alt="logo-bridge">
+        <div class="nav-content">
+            <img class="logo" src="imagens/logo-bridge.png" alt="logo-bridge">
+            <img  id="menuicone" src="imagens/iconemenu.svg" alt="iconemenu">
+        </div>
         
     </div>
-
+    
     <!-- Seção Missão -->
     <section class="missao">
         <div class="content">
