--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="missao">
         <div class="content">
             <div class="text">
-                <h1 id="missaoh1">Nossa Missão</h1>
+                <h1 id="missaoh1">Missão</h1>
                 <p>Na Bridge Assessoria Digital, nossa missão é trazer o mundo digital para empresas que ainda não deram esse passo e proporcionar uma transformação para aquelas cujas informações estão desatualizadas. <br>
                 Acreditamos que a presença online é essencial nos dias de hoje, e estamos comprometidos em ajudar nossos clientes a brilhar no cenário digital.</p>
             </div>
