--- a/index.html
+++ b/index.html
@@ -90,12 +90,13 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section about">
-                <h2>Sobre Nós</h2>
-                <p>Somos a Bridge Assessoria Digital, especialistas em trazer o mundo digital para o seu negócio. Conte conosco para transformar sua presença online.</p>
+                <h2>Horários</h2>
+                <p>De Segunda a Sexta-feira das 08 as 18hrs.</p>
             </div>
             <div class="footer-section contact">
                 <h2>Contato</h2>
-                <p>Email: info@bridgeassessoria.com<br>Telefone: (11) 1234-5678</p>
+                <p>Email: Bridgeassessoriadigital@gmail.com<br>Telefone: (11) 95844-1225 ou (11) 99321-1407
+                    </p>
             </div>
         </div>
         <div class="footer-bottom">
