--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="nav-list">
                 <ul>
                     <li class="nav-item"> <a href="#" class="nav-link">Home</a></li>
-                    <li class="nav-item"> <a href="#" class="nav-link">Serviços</a></li>
+                    <li class="nav-item"> <a href="servicos/servicos.html" class="nav-link">Serviços</a></li>
                     <li class="nav-item"> <a href="#" class="nav-link">Projetos</a></li>
                     <li class="nav-item"> <a href="#" class="nav-link">Contato</a></li>
                     
@@ -33,7 +33,7 @@
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item"> <a href="#" class="nav-link">Home</a></li>
-                <li class="nav-item"> <a href="#" class="nav-link">Serviços</a></li>
+                <li class="nav-item"> <a href="servicos.html" class="nav-link">Serviços</a></li>
                 <li class="nav-item"> <a href="#" class="nav-link">Projetos</a></li>
                 <li class="nav-item"> <a href="#" class="nav-link">Contato</a></li>
                 
