--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
         </div>
     </section>
 
+    <!--Botão whatsapp-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<a href="https://www.seusite.com.br/whatsapp/" target="_blank">
+    <div class="btn-whatsapp pulsaDelay"><i class="fa fa-whatsapp"></i></div>
+</a>
+<!--Botão whatsapp-->
+
     <!-- Rodapé -->
     <footer>
         <div class="footer-content">
