--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -31,7 +31,7 @@
 
         <div class="mobile-menu">
             <ul>
-                <li class="nav-item"> <a href="#" class="nav-link">Home</a></li>
+                <li class="nav-item"> <a href="../index.html" class="nav-link">Home</a></li>
                 <li class="nav-item"> <a href="servicos/servicos.html" class="nav-link">Serviços</a></li>
                 <li class="nav-item"> <a href="#" class="nav-link">Projetos</a></li>
                 <li class="nav-item"> <a href="#" class="nav-link">Contato</a></li>
