--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Bridge Assessoria Digital | Desenvolvido por Mateus Lima </p>
+            <p>&copy; 2024 Bridge Assessoria Digital | Desenvolvido por <a id="devsession" href="https://github.com/MateusLimadev">Mateus lima</a> </p>
         </div>
     </footer>
 
