--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -109,6 +109,22 @@
 </a>
 <!--Botão whatsapp-->
     
+<footer>
+    <div class="footer-content">
+        <div class="footer-section about">
+            <h2>Horários</h2>
+            <p>De Segunda a Sexta-feira das 08 as 18hrs.</p>
+        </div>
+        <div class="footer-section contact">
+            <h2>Contato</h2>
+            <p>Email: Bridgeassessoriadigital@gmail.com<br>Telefone: (11) 95844-1225 ou (11) 99321-1407
+                </p>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>&copy; 2024 Bridge Assessoria Digital | Desenvolvido por <a id="devsession" href="https://github.com/MateusLimadev">Mateus lima</a> </p>
+    </div>
+</footer>
 
 </body>
 </html>
