--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     
     <header>
         <nav class="nav-bar">
-            <div class="logo">
-                <img src="imagens/logobridge.svg" alt="">
+            <div>
+                <img id="logoimg" src="imagens/logobridge.svg" alt="">
             </div>
             <div class="nav-list">
                 <ul>
