--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="nav-bar">
             <div class="logo">
-                <img src="img/logobridge.svg" alt="">
+                <img id="logoimg" src="img/logobridge.svg" alt="">
             </div>
             <div class="nav-list">
                 <ul>
