--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="servicos.css">
+    <!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Slick Carousel CSS -->
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+
+<!-- Slick Carousel JS -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
     <title>Bridge Serviços</title>
 </head>
 <body>
 
     <header>
         <nav class="nav-bar">
-            <div class="logo">
+            <div>
                 <img id="logoimg" src="img/logobridge.svg" alt="">
             </div>
-            <div class="nav-list">
+            <div class="nav-list" >
                 <ul>
                     <li class="nav-item"> <a href="../index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"> <a href="servicos.html" class="nav-link">Serviços</a></li>
+                    <li class="nav-item"> <a href="servicos/servicos.html" class="nav-link">Serviços</a></li>
                     <li class="nav-item"> <a href="#" class="nav-link">Projetos</a></li>
                     <li class="nav-item"> <a href="#" class="nav-link">Contato</a></li>
                     
@@ -24,11 +33,10 @@
             </div>
            <div class="mobile-menu-icon">
             <button onclick="menuShow()">
-                <img  class="icon" src="img/iconemenu.svg">
+                <img  class="icon" src="imagens/iconemenu.svg">
             </button>
            </div>
         </nav>
-
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item"> <a href="../index.html" class="nav-link">Home</a></li>
@@ -99,6 +107,8 @@
             </div>
 
         </div>
+
+        
 
     </main>
 
