--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="bridgestyle.css">
+    <link rel="stylesheet" href="style.css">
     <title>Bridge Assessoria Digital</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <div class="nav-list" >
                 <ul>
                     
-                    <li class="nav-item"> <a href="#" class="nav-link">Home</a></li>
+                    <li class="nav-item"> <a href="index.html" class="nav-link">Home</a></li>
                     <li class="nav-item"> <a href="#" class="nav-link">Serviços</a></li>
                     <li class="nav-item"> <a href="#" class="nav-link">Projetos</a></li>
                     <li class="nav-item"> <a href="#" class="nav-link">Contato</a></li>
@@ -33,7 +33,7 @@
 
         <div class="mobile-menu">
             <ul>
-                <li class="nav-item"> <a href="#" class="nav-link">Home</a></li>
+                <li class="nav-item"> <a href="index.html" class="nav-link">Home</a></li>
                 <li class="nav-item"> <a href="#" class="nav-link">Serviços</a></li>
                 <li class="nav-item"> <a href="#" class="nav-link">Projetos</a></li>
                 <li class="nav-item"> <a href="#" class="nav-link">Contato</a></li>
@@ -156,6 +156,6 @@
 
     
 
-    <script src="bridgehome.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
