--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
         </div>
           
         <div class="redes-sociais">
-            <img id="logoinsta" src="imagens/redes-sociais/instagram.png" alt="instagram">
+            <a href="https://www.instagram.com/bridgeassessoriadigital/"></a><img id="logoinsta" src="imagens/redes-sociais/instagram.png" alt="instagram"> </a>
             <img id="logowhats" src="imagens/redes-sociais/whatsapp.png" alt="whatsapp">
             <img id="logotiktok" src="imagens/redes-sociais/tiktok.png" alt="tiktok">
             <img id="logoemail" src="imagens/redes-sociais/email.png" alt="email">
 
         </div>
-    
+   
         <div class="footer-bottom">
             <p>&copy; 2024 Bridge Assessoria Digital | Desenvolvido por <a id="devsession" href="https://github.com/MateusLimadev">Mateus lima</a> </p>
         </div>
