--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
           
         <div class="redes-sociais">
-            <a href="https://www.instagram.com/bridgeassessoriadigital/"></a><img id="logoinsta" src="imagens/redes-sociais/instagram.png" alt="instagram"> </a>
+            <a href="https://www.instagram.com/bridgeassessoriadigital/"><img id="logoinsta" src="imagens/redes-sociais/instagram.png" alt="instagram"> </a>
             <img id="logowhats" src="imagens/redes-sociais/whatsapp.png" alt="whatsapp">
             <img id="logotiktok" src="imagens/redes-sociais/tiktok.png" alt="tiktok">
             <img id="logoemail" src="imagens/redes-sociais/email.png" alt="email">
