--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <a href="https://www.instagram.com/bridgeassessoriadigital/"><img id="logoinsta" src="imagens/redes-sociais/instagram.png" alt="instagram"> </a>
             <img id="logowhats" src="imagens/redes-sociais/whatsapp.png" alt="whatsapp">
             <img id="logotiktok" src="imagens/redes-sociais/tiktok.png" alt="tiktok">
-            <a href="bridgeassessoriadigital@gmail.com"><img id="logoemail" src="imagens/redes-sociais/email.png" alt="email"></a>
+            <a href="mailto:bridgeassessoriadigital@gmail.com"><img id="logoemail" src="imagens/redes-sociais/email.png" alt="email"></a>
 
         </div>
    
