--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     
                     <li class="nav-item"> <a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"> <a href="#" class="nav-link">Serviços</a></li>
+                    <li class="nav-item"> <a href="servicos/servicos.html" class="nav-link">Serviços</a></li>
                     <li class="nav-item"> <a href="#" class="nav-link">Projetos</a></li>
                     <li class="nav-item"> <a href="#" class="nav-link">Contato</a></li>
                     <li class="nav-item"> <a href="#" class="nav-link">Sobre nós</a></li>
@@ -34,7 +34,7 @@
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item"> <a href="index.html" class="nav-link">Home</a></li>
-                <li class="nav-item"> <a href="#" class="nav-link">Serviços</a></li>
+                <li class="nav-item"> <a href="servicos/servicos.html" class="nav-link">Serviços</a></li>
                 <li class="nav-item"> <a href="#" class="nav-link">Projetos</a></li>
                 <li class="nav-item"> <a href="#" class="nav-link">Contato</a></li>
                 <li class="nav-item"> <a href="#" class="nav-link">Sobre nós</a></li>
