--- a/projetos/projetos.html
+++ b/projetos/projetos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="servicos.css">
+    <link rel="stylesheet" href="projetos.css">
     <link rel="shortcut icon" href="../imagens/favicon.png" type="image/x-icon">
     <title>Bridge Assessoria Digital</title>
 </head>
@@ -17,7 +17,7 @@
                 <ul>
                     
                     <li class="nav-item"> <a href="../index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"> <a href="servicos.html" class="nav-link">Serviços</a></li>
+                    <li class="nav-item"> <a href="../servicos/servicos.html" class="nav-link">Serviços</a></li>
                     <li class="nav-item"> <a href="../projetos/projetos.html" class="nav-link">Projetos</a></li>
                     <li class="nav-item"> <a href="#" class="nav-link">Contato</a></li>
                     <li class="nav-item"> <a href="#" class="nav-link">Sobre nós</a></li>
@@ -34,10 +34,10 @@
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item"> <a href="../index.html" class="nav-link">Home</a></li>
-                <li class="nav-item"> <a href="servicos.html" class="nav-link">Serviços</a></li>
-                <li class="nav-item"> <a href="../projetos/projetos.html" class="nav-link">Projetos</a></li>
+                <li class="nav-item"> <a href="../servicos/servicos.html" class="nav-link">Serviços</a></li>
+                <li class="nav-item"> <a href="#" class="nav-link">Projetos</a></li>
                 <li class="nav-item"> <a href="#" class="nav-link">Contato</a></li>
-                <li class="nav-item"> <a href="#" class="nav-link">Sobre nós</a></li>
+                <li class="nav-item"> <a href="../projetos/projetos.html" class="nav-link">Sobre nós</a></li>
                 
             </ul>
         </div>
