--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <section class="cards-container" id="cardscontainer">
         <div class="card">
-            <img src="imagens/SEO.jpg" alt="Identidade de Marca">
+            <img src="imagens/SEO.jpg" alt="Identidade de Marca"  loading="lazy" >
             <h3>Identidade de Marca</h3>
             <p>Criamos uma identidade visual única que reflete a personalidade da sua marca, abrangendo elementos visuais, storytelling e design digital para uma presença coesa e memorável.</p>
             <a href="" id="vermais" >Ver mais</a>
@@ -60,7 +60,7 @@
         </div>
     
         <div class="card">
-            <img src="imagens/SEO.jpg" alt="Gestão de Mídia">
+            <img src="imagens/SEO.jpg" alt="Gestão de Mídia" loading="lazy" >
             <h3>Gestão de Mídia</h3>
             <p>Maximizamos o impacto da sua mensagem através de estratégias inovadoras e otimização de campanhas de mídia, focando em gerar engajamento e resultados excepcionais.</p>
             <a href="" id="vermais">Ver mais</a>
@@ -68,7 +68,7 @@
         </div>
 
         <div class="card">
-            <img src="imagens/SEO.jpg" alt="Crescimento Estratégico">
+            <img src="imagens/SEO.jpg" alt="Crescimento Estratégico" loading="lazy" >
             <h3>Crescimento Estratégico</h3>
             <p>Impulsionamos o seu negócio para novas alturas desenvolvendo estratégias inteligentes para aumentar a presença e impulsionar o crescimento sustentável no mercado.</p>
             <a href=""id="vermais" >Ver mais</a>
@@ -77,7 +77,7 @@
 
 
         <div class="card">
-            <img src="imagens/SEO.jpg" alt="Visibilidade Online">
+            <img src="imagens/SEO.jpg" alt="Visibilidade Online" loading="lazy" >
             <h3>Visibilidade Online</h3>
             <p>Elevamos a visibilidade online da sua marca através de otimização para mecanismos de busca e estratégias de tráfego pago, garantindo que sua presença digital seja notada e atraindo tráfego qualificado.</p>
             <a href=""id="vermais" >Ver mais</a>
@@ -145,7 +145,7 @@
             <a href="https://www.instagram.com/bridgeassessoriadigital/"><img id="logoinsta" src="imagens/redes-sociais/instagram.png" alt="instagram"> </a>
             <img id="logowhats" src="imagens/redes-sociais/whatsapp.png" alt="whatsapp">
             <img id="logotiktok" src="imagens/redes-sociais/tiktok.png" alt="tiktok">
-            <a href="mailto:bridgeassessoriadigital@gmail.com"><img id="logoemail" src="imagens/redes-sociais/email.png" alt="email"></a>
+            <a href="mailto:bridgeassessoriadigital@gmail.com?subject=Vamos fazer um novo projeto?!"><img id="logoemail" src="imagens/redes-sociais/email.png" alt="email"></a>
 
         </div>
    
