--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
         </div>
     </section>
 
+    <section class="top-mobile">
+        <div class="buttons-container">
+            <button class="orange-button">Orçamento</button>
+            <button class="transparent-button">Projetos</button>
+        </div>
+    </section>
+
     <section class="cards-container" id="cardscontainer">
         <div class="card">
             <img src="imagens/SEO.jpg" alt="Identidade de Marca"  loading="lazy" >
