--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     
         <div class="imagem-container">
             <a href="https://www.instagram.com/bridgeassessoriadigital/"><img src="imagens/previa-projetos/hb-soundsistem.jpg" alt="Imagem 3"></a>
-            <h2>HB Sound System</h2>
+            <h2>HB Sound <br> System</h2>
             <h3>Design Digital</h3>
         </div>
     
