--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <section class="cards-container" id="cardscontainer">
         <div class="card">
-            <img src="imagens/SEO.jpg" alt="Identidade de Marca"  loading="lazy" >
+            <img src="imagens/id-marca.jpg" alt="Identidade de Marca"  loading="lazy" >
             <h3>Identidade de Marca</h3>
             <p>Criamos uma identidade visual única que reflete a personalidade da sua marca, abrangendo elementos visuais, storytelling e design digital para uma presença coesa e memorável.</p>
             <a href="" id="vermais" >Ver mais</a>
