--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
         <h3>Design Digital</h3>
     </section>
 
+
+    <section class="projetos-mobile">
+        <a href="https://www.instagram.com/bridgeassessoriadigital/"> <img id="arvoredoprev" src="imagens/previa-projetos/arvoredo.jpg" alt="arvoredoprev"></a>
+        <h2>Arvoredo</h2>
+        <h3>Design Digital</h3>
+    </section>
+
     <section class="quatro-imagens">
         <div class="imagem-container">
             <a href="https://www.instagram.com/bridgeassessoriadigital/"><img src="imagens/previa-projetos/aluma-construcao.jpg" alt="Imagem 1"></a>
