--- a/index.html
+++ b/index.html
@@ -102,9 +102,24 @@
 
 
     <section class="projetos-mobile">
-        <a href="https://www.instagram.com/bridgeassessoriadigital/"> <img id="arvoredoprev" src="imagens/previa-projetos/arvoredo.jpg" alt="arvoredoprev"></a>
-        <h2>Arvoredo</h2>
+        <a href="https://www.instagram.com/bridgeassessoriadigital/"> <img id="projetos-mobile" src="imagens/previa-projetos/aluma-construcao.jpg" alt="arvoredoprev"></a>
+        <h2>Aluma Construção</h2>
+        <h3>Identidade Visual</h3>
+
+        <a href="https://www.instagram.com/bridgeassessoriadigital/"> <img id="projetos-mobile" src="imagens/previa-projetos/germano-portas.jpg" alt="arvoredoprev"></a>
+        <h2>Germano Portas</h2>
+        <h3>Identidade Visual</h3>
+
+
+        <a href="https://www.instagram.com/bridgeassessoriadigital/"> <img id="projetos-mobile" src="imagens/previa-projetos/tavares.jpg" alt="arvoredoprev"></a>
+        <h2>Tavares</h2>
         <h3>Design Digital</h3>
+
+        <a href="https://www.instagram.com/bridgeassessoriadigital/"> <img id="projetos-mobile" src="imagens/previa-projetos/hb-soundsistem.jpg" alt="arvoredoprev"></a>
+        <h2>HB Sound System</h2>
+        <h3>Design Digital</h3>
+
+
     </section>
 
     <section class="quatro-imagens">
