--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
            </div>
         </nav>
 
+
+        <div class="img-back">
+            <img src="imagens/background-bridge.jpg" alt="bridgeassessoriadigital">
+
+        </div>
+
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item"> <a href="index.html" class="nav-link">Home</a></li>
@@ -43,12 +49,7 @@
         </div>
     </header>
 
-    <section class="top-content">
-        <div class="buttons-container">
-            <button class="orange-button">Orçamento</button>
-            <button class="transparent-button">Projetos</button>
-        </div>
-    </section>
+
 
     <section class="top-mobile">
         <div class="buttons-container">
