--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <section class="cards-container" id="cardscontainer">
         <div class="card">
-            <img src="imagens/id-marca.jpg" alt="Identidade de Marca"  loading="lazy" >
+            <img src="imagens/SEO.jpg" alt="Identidade de Marca"  loading="lazy" >
             <h3>Identidade de Marca</h3>
             <p>Criamos uma identidade visual única que reflete a personalidade da sua marca, abrangendo elementos visuais, storytelling e design digital para uma presença coesa e memorável.</p>
             <button class="btn">Ver mais</button>
@@ -70,7 +70,7 @@
         <div class="card">
             <img src="imagens/SEO.jpg" alt="Gestão de Mídia" loading="lazy" >
             <h3>Gestão de Mídia</h3>
-            <p>Maximizamos o impacto da sua mensagem através de estratégias inovadoras e otimização de campanhas de mídia, focando em gerar engajamento e resultados excepcionais.</p>
+            <p id="p2">Maximizamos o impacto da sua mensagem através de estratégias inovadoras e otimização de campanhas de mídia, focando em gerar engajamento e resultados excepcionais.</p>
             <button class="btn">Ver mais</button>
 
             
@@ -79,7 +79,7 @@
         <div class="card">
             <img src="imagens/SEO.jpg" alt="Crescimento Estratégico" loading="lazy" >
             <h3>Crescimento Estratégico</h3>
-            <p>Impulsionamos o seu negócio para novas alturas desenvolvendo estratégias inteligentes para aumentar a presença e impulsionar o crescimento sustentável no mercado.</p>
+            <p id="p3">Impulsionamos o seu negócio para novas alturas desenvolvendo estratégias inteligentes para aumentar a presença e impulsionar o crescimento sustentável no mercado.</p>
             <button class="btn">Ver mais</button>
             
         </div>
