--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -71,11 +71,8 @@
 
     <section class="cards-container" id="cardscontainer">
 
-        <div class="subtitle">
-        <h2>Conheça nossos serviços</h2>
-       </div>
-
-
+        <h2 class="subtitle">Conheça nossos serviços</h2>
+       
         <div class="card">
             <img src="../imagens/id-marca.jpg" alt="Identidade de Marca"  loading="lazy" >
             <h3>Identidade Visual</h3>
