--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
     <div class="top-mobile">
-        <img src="imagens/backgrund-mobile.png" alt="bridgeassessoriadigital">
+        <img src="imagens/background-bridge-mobile.jpg" alt="bridgeassessoriadigital">
             <button class="animated-button">
                 <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
                   <path
