--- a/contato/contato.html
+++ b/contato/contato.html
@@ -60,10 +60,9 @@
             <form class="form" method="post" action="./email.php">
                 <input type="text" class="field" name="name" placeholder="nome">
                 <input type="text" class="field" name="email" placeholder="email">
-                <textarea class="field" name="mesage" placeholder="digite sua mensagem aqui."></textarea>
+                <textarea class="field" name="message" placeholder="digite sua mensagem aqui."></textarea>
                 <input type="submit" value="enviar">
-
-            </form>
+            </form>            
         </div>
 
     </section>
