--- a/contato/contato.html
+++ b/contato/contato.html
@@ -35,8 +35,8 @@
             <ul>
                 <li class="nav-item"> <a href="../index.html" class="nav-link">Home</a></li>
                 <li class="nav-item"> <a href="../servicos/servicos.html" class="nav-link">Serviços</a></li>
-                <li class="nav-item"> <a href="#" class="nav-link">Projetos</a></li>
-                <li class="nav-item"> <a href="#" class="nav-link">Contato</a></li>
+                <li class="nav-item"> <a href="../projetos/projetos.html" class="nav-link">Projetos</a></li>
+                <li class="nav-item"> <a href="../contato/contato.html" class="nav-link">Contato</a></li>
                 <li class="nav-item"> <a href="../projetos/projetos.html" class="nav-link">Sobre nós</a></li>
                 
             </ul>
