--- a/contato/contato.html
+++ b/contato/contato.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="nav-bar">
             <div>
-                <img id="logoimg" src="../imagens/logobridge.svg" alt="">
+                <a href="../index.html"><img id="logoimg" src="../imagens/logobridge.svg" alt=""></a>
             </div>
             <div class="nav-list" >
                 <ul>
