--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -64,10 +64,12 @@
 
     <div class="top-frase">
         <img src="../imagens/banner-servicos.jpg" alt="crescimento">
-        <h1>Elevando Empresas, Criando Valor.</h1>
-        <p>A construção de uma identidade de marca robusta desempenha um papel crucial na excelência dos negócios. Uma identidade visual bem estabelecida não apenas comunica clareza, mas também cria uma percepção positiva em torno da marca. A consistência na mensagem fortalece a presença, transformando a visão da marca em algo tangível e significativo.</p>
-        
+        <div class="texto-sobre-imagem">
+            <h1>Elevando Empresas,<br> Criando Valor.</h1>
+            <p>A construção de uma identidade de marca robusta desempenha um papel crucial na excelência dos negócios. Uma identidade visual bem estabelecida não apenas comunica clareza, mas também cria uma percepção positiva em torno da marca. A consistência na mensagem fortalece a presença, transformando a visão da marca em algo tangível e significativo.</p>
+        </div>
     </div>
+    
 
     <section class="cards-container" id="cardscontainer">
 
