--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -86,7 +86,7 @@
     
         <div class="card">
             <img src="../imagens/gestaodemidia.jpg" alt="Gestão de Mídia" loading="lazy" >
-            <h3>Gestão de Mídia</h3>
+            <h3>Social Mídia</h3>
             <p id="p2">Maximizamos o impacto da sua mensagem. Com estratégias inovadoras, otimizamos cada campanha de mídia para alcançar o público certo no momento certo, gerando engajamento e resultados excepcionais.
             </p>
             <button class="btn">Orçamento</button>
