--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -146,7 +146,7 @@
 
     <div class="mobile-card">
         <img src="../imagens/gestaodemidia.jpg" alt="Gestão de Mídia" loading="lazy">
-        <h3>Gestão de Mídia</h3>
+        <h3>Social Mídia</h3>
         <p>Aprimoramos a mensagem, maximizando impacto com estratégias inovadoras e otimização de campanhas de mídia, focando em engajamento e resultados excepcionais.</p>
         <button class="btn">Orçamento</button>
     </div>
