--- a/sobrenos/sobrenos.html
+++ b/sobrenos/sobrenos.html
@@ -45,21 +45,21 @@
 
     <div class="missao">
         <h1>Missão</h1>
-        <p>Na Bridge Assessoria Digital, nossa missão é trazer o mundo digital para empresas que ainda não deram esse passo e proporcionar uma transformação para aquelas cujas informações estão desatualizadas. Acreditamos que a presença online é essencial nos dias de hoje, e estamos comprometidos em ajudar nossos clientes a brilhar no cenário digital.
+        <p>Na Bridge Assessoria Digital, temos como missão ser a ponte que conecta empresas ao mundo digital, fornecendo soluções personalizadas que impulsionam a transformação e modernização dos negócios. Nosso compromisso é não apenas oferecer serviços, mas sim proporcionar uma jornada de crescimento e sucesso para cada cliente.
         </p>
         <img src="../imagens/img-missao.png" alt="missao">
     </div>
 
     <div class="visao">
         <h1>Visão</h1>
-        <p>Nossa visão é criar uma rede de network que estabeleça pontes entre nossos clientes, fortalecendo e impulsionando todos os empreendimentos envolvidos. Acreditamos que o poder do networking pode levar a oportunidades ilimitadas, e queremos ser o elo que conecta os negócios ao sucesso.
+        <p>Nossa visão vai além de simplesmente prestar serviços; aspiramos a construir uma comunidade de networking onde cada cliente se beneficie das conexões estabelecidas. Acreditamos que essa rede de colaboração é essencial para fortalecer e impulsionar todos os empreendimentos envolvidos. Além disso, reconhecemos a importância fundamental da presença online e nos dedicamos a capacitar nossos clientes para brilhar no cenário digital, conquistando um espaço de destaque em seus setores.
         </p>
         <img src="../imagens/img-visao.png" alt="visao">
     </div>
 
     <div class="valores">
         <h1>Valores</h1>
-        <p>Na Bridge Assessoria Digital, nossos valores fundamentais são o compromisso com o cliente e a integridade. Colocamos o cliente no centro de tudo o que fazemos e priorizamos a honestidade em nossos relacionamentos, colocando-a acima de qualquer ganho monetário.
+        <p>Na Bridge Assessoria Digital, nossos valores fundamentais são o compromisso inabalável com a satisfação do cliente e a integridade em todas as nossas interações. Colocamos o cliente no centro de tudo o que fazemos, buscando sempre compreender suas necessidades e superar suas expectativas. Além disso, cultivamos uma cultura de transparência e honestidade, priorizando relacionamentos baseados na confiança mútua e na ética profissional.
         </p>
         <img src="../imagens/img-valores.png" alt="valores">
     </div>
