--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li class="nav-item"> <a href="servicos/servicos.html" class="nav-link">Serviços</a></li>
                     <li class="nav-item"> <a href="projetos/projetos.html" class="nav-link">Projetos</a></li>
                     <li class="nav-item"> <a href="contato/contato.html" class="nav-link">Contato</a></li>
-                    <li class="nav-item"> <a href="sobrenos/sobrenos.html" class="nav-link">Sobre </a></li>
+                    <li class="nav-item"> <a href="sobrenos/sobrenos.html" class="nav-link">Sobre nós </a></li>
                     
                 </ul>
             </div>
