--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Bridge | Assessoria Digital</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
+   
 </head>
 
 <header id="header">
@@ -129,6 +130,39 @@
            </div>
         </div>
     </div>
+   
+    <section>
+      <footer class="top">
+        <img src="imagens/logobridge.svg" />
+        <div class="links">
+          <div>
+            <h2>Links Úteis</h2>
+            <a>Home</a>
+            <a>Serviços</a>
+            <a>Projetos</a>
+            <a>Sobre nós</a>
+          </div>
+          <div>
+            <h2>Redes Sociais</h2>
+            <a>Instagram</a>
+            <a>Whatsapp</a>
+            <a>Linkedin</a>
+            <a>Tiktok</a>
+          </div>
+        </div>
+      </footer>
+      <footer class="bottom">
+        <div class="legal">
+          <span> © 2024 todos os direitos reservados </span>
+          
+        </div>
+        <div class="links">
+          <a class="logo-insta"><img src="assets/imagens/redessociais/instagram.png" alt="instalogo"></a>
+          <a class="logo-whats"><img src="assets/imagens/redessociais/whatsapp.png" alt="whatsalogo"></a>
+          <a class="logo-email"><img src="assets/imagens/redessociais/email.png" alt="emailicon"></a>
+        </div>
+      </footer>
+    </section>
 
 
     <script src="script.js"></script>
