--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Bridge | Assessoria Digital</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="shortcut icon" href="assets/imagens/favicon.png" type="image/x-icon">
    
 </head>
 
@@ -17,7 +18,7 @@
         </button>
         <ul id="menu" role="menu">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Serviços</a></li>
+            <li><a href="servicos/servicos.html">Serviços</a></li>
             <li><a href="#">Projetos</a></li>
             <li><a href="#">Sobre nós</a></li>
             <li><a href="#">Contato</a></li>
