--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bridge | Assessoria Digital</title>
     <link rel="stylesheet" href="servicos.css">
+    <link rel="stylesheet" href="responsive.css">
     <link rel="shortcut icon" href="/assets/imagens/favicon.png" type="image/x-icon">
 </head>
 <body>
@@ -15,7 +16,7 @@
             <span id="hamburguer"></span>
         </button>
         <ul id="menu" role="menu">
-            <li><a href="#">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="servicos/servicos.html">Serviços</a></li>
             <li><a href="#">Projetos</a></li>
             <li><a href="#">Sobre nós</a></li>
@@ -25,10 +26,16 @@
 </header>
 <div class="container">
     <img id="bannerPC" src="/imagens/banner-servicos.jpg" alt="bannerPC">
-    <img id="bannerMobile" src="assets/imagens/bannerMobile.png" alt="bannerMobile">
+    <img id="bannerMobile" src="/imagens/bannerservicos-mobile.jpg" alt="bannerMobile">
       <div class="text-container">
           <h1>Elevando empresas,<br> Criando Valor.</h1>
           <p>A presença marcante de uma identidade visual bem definida desempenha um papel vital na qualidade dos negócios. Ao estabelecer uma sólida base visual, a marca conquista clareza na comunicação, promovendo uma percepção mais positiva e conferindo consistência ao seu conteúdo de maneira regular.</p>
+      </div>
+
+      <div class="mobilecontent">
+        <h1>Elevando empresas,<br> Criando Valor.</h1>
+
+        <p>A presença marcante de uma identidade visual bem definida desempenha um papel vital na qualidade dos negócios. Ao estabelecer uma sólida base visual, a marca conquista clareza na comunicação, promovendo uma percepção mais positiva e conferindo consistência ao seu conteúdo de maneira regular.</p>
       </div>
 </div>
 
