--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="servicos.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="shortcut icon" href="/assets/imagens/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-XX2QtN3h4ZtwvtlrbdN8peU/C3doB4DOckPiCvTrXrXaFlszg/FWW7QweUtqEJUCwYpPWQQEn2fRXifqKz3Jzg==" crossorigin="anonymous" />
+
 </head>
 <body>
     <header id="header">
@@ -36,6 +38,9 @@
         <h1>Elevando empresas,<br> Criando Valor.</h1>
 
         <p>A presença marcante de uma identidade visual bem definida desempenha um papel vital na qualidade dos negócios. Ao estabelecer uma sólida base visual, a marca conquista clareza na comunicação, promovendo uma percepção mais positiva e conferindo consistência ao seu conteúdo de maneira regular.</p>
+
+        <button id="btn-mobile-servicos" class="fas fa-chevron-down"> Conheça nossos serviços</button>
+
       </div>
 </div>
 
