--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -53,63 +53,63 @@
 </article>
 
 <div class="cards">
-    <div id="card1">
+    <div class="card" id="card1">
     <img src="/assets/imagens/cardimgs/idmarca.png" alt="serviço7" id="img7">
     <h1 id="">Criação de Sites</h1>
     <p>Desenvolvemos sites incríveis, desde landing pages até projetos mais complexos, para proporcionar uma presença online eficaz e atraente para o seu público-alvo.</p>
     <a href="#">Saiba mais.</a>
 </div>
 
-    <div id="card2">
+    <div class="card"  id="card2">
     <img src="/assets/imagens/cardimgs/visibilidade.png" alt="serviço4" id="img4">
     <h1>Design Digital</h1>
     <p>Criamos experiências visuais que deixam uma marca duradoura. Dos pixels à emoção, nossos designs digitais não apenas atraem, mas também envolvem seu público, proporcionando uma presença online única e inesquecível.</p>
     <a href="#">Saiba mais.</a>
 </div>
 
-    <div id="card3">
+    <div class="card"  id="card3">
     <img src="/assets/imagens/cardimgs/crescimento.png" alt="serviço3" id="img3">
     <h1>Estratégia de alavancagem</h1>
     <p>Impulsionamos o seu negócio, desenvolvendo estratégias inteligentes para ampliar a presença e promover o crescimento sustentável no mercado.</p>
     <a href="#">Saiba mais.</a>
 </div>
 
-    <div id="card4">
+    <div class="card"  id="card4">
     <img src="/assets/imagens/cardimgs/idmarca.png" alt="serviço1" id="imgcard">
     <h1 id="title-card">Identidade visual</h1>
     <p id="description-card">Criamos uma identidade visual única, refletindo a personalidade da sua marca com elementos visuais, storytelling e design digital para uma presença coesa e memorável.</p>
     <a href="#">Saiba mais.</a>
 </div>
 
-    <div id="card5">
+    <div class="card"  id="card5">
     <img src="/assets/imagens/cardimgs/visibilidade.png" alt="serviço4" id="img4">
     <h1>Performance Marketing</h1>
     <p>Mais do que campanhas, criamos experiências envolventes. Nosso foco é impulsionar o desempenho, gerando resultados tangíveis. Cada campanha é uma jornada estratégica que leva seus clientes a uma conexão mais profunda com sua marca.</p>
     <a href="#">Saiba mais.</a>
 </div>
 
-    <div id="card6">
+    <div class="card"  id="card6">
     <img src="/assets/imagens/cardimgs/socialmedia.png" alt="serviço2" id="img2">
     <h1>Social Media</h1>
     <p>Aprimoramos a mensagem, maximizando impacto com estratégias inovadoras e otimização de campanhas de mídia, focando em engajamento e resultados excepcionais.</p>
     <a href="#">Saiba mais.</a>
 </div>
 
-    <div id="card7">
+    <div class="card"  id="card7">
     <img src="/assets/imagens/cardimgs/visibilidade.png" alt="serviço4" id="img4">
     <h1>SEO/Tráfego pago</h1>
     <p>Elevamos a visibilidade online da sua marca, otimizando para mecanismos de busca e tráfego pago, garantindo notoriedade digital e atraindo tráfego qualificado.</p>
     <a href="#">Saiba mais.</a>
 </div>
 
- <div id="card8">
+ <div class="card"  id="card8">
     <img src="/assets/imagens/cardimgs/visibilidade.png" alt="serviço4" id="img4">
     <h1>extra</h1>
     <p>Elevamos a visibilidade online da sua marca, otimizando para mecanismos de busca e tráfego pago, garantindo notoriedade digital e atraindo tráfego qualificado.</p>
     <a href="#">Saiba mais.</a>
 </div>
 
-<div id="card9">
+<div class="card"  id="card9">
     <img src="/assets/imagens/cardimgs/visibilidade.png" alt="serviço4" id="img4">
     <h1>extra</h1>
     <p>Elevamos a visibilidade online da sua marca, otimizando para mecanismos de busca e tráfego pago, garantindo notoriedade digital e atraindo tráfego qualificado.</p>
