--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
 
     <div class="projects" >
-        <div id="projectdestaque">
+        <div id="projectdestaque" class="project" >
             <img src="assets/imagens/projetos/destaque.jpg" alt="projectdestaque">
             <h1>Projeto x</h1>
             <p>Saiba mais.</p>
@@ -94,37 +94,37 @@
 
         <div id="outhersprojects">
 
-           <div id="projeto1">
+           <div id="projeto1" class="project" >
             <img src="assets/imagens/projetos/1.png" alt="project1">
             <h1>Projeto x</h1>
             <p>Saiba mais.</p>
            </div>
 
-           <div id="projeto2">
+           <div id="projeto2" class="project" >
             <img src="assets/imagens/projetos/2.png" alt="project2">
             <h1>Projeto x</h1>
             <p>Saiba mais.</p>
            </div>
 
-           <div id="projeto3">
+           <div id="projeto3" class="project" >
             <img src="assets/imagens/projetos/3.png" alt="project3">
             <h1>Projeto x</h1>
             <p>Saiba mais.</p>
            </div>
 
-           <div id="projeto4">
+           <div id="projeto4" class="project" >
             <img src="assets/imagens/projetos/4.png" alt="project4">
             <h1>Projeto x</h1>
             <p>Saiba mais.</p>
            </div>
 
-           <div id="projeto5">
+           <div id="projeto5" class="project" >
             <img src="assets/imagens/projetos/5.png" alt="project5">
             <h1>Projeto x</h1>
             <p>Saiba mais.</p>
            </div>
 
-           <div id="projeto6">
+           <div id="projeto6" class="project" >
             <img src="assets/imagens/projetos/6.png" alt="project6">
             <h1>Projeto x</h1>
             <p>Saiba mais.</p>
