--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
 <div class="container">
     <img id="bannerPC" src="assets/imagens/bannerPC.png" alt="bannerPC">
     <img id="bannerMobile" src="assets/imagens/bannerMobile.png" alt="bannerMobile">
-        <h1>venha</h1>
-        <h3>ser</h3>
-        <h2>digital</h2>
-
-</div>
+    <h1>venha</h1>
+    <h3>ser</h3>
+    <h2 id="typing-effect"></h2>
+  </div>
 
 
     <body>
