--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -123,17 +123,17 @@
         <div class="links">
           <div>
             <h2>Links Úteis</h2>
-            <a>Home</a>
-            <a>Serviços</a>
+            <a href="/index.html">Home</a>
+            <a href="/servicos/servicos.html">Serviços</a>
             <a>Projetos</a>
             <a>Sobre nós</a>
           </div>
           <div>
             <h2>Redes Sociais</h2>
-            <a>Instagram</a>
+            <a href="https://www.instagram.com/bridgeassessoriadigital/" target="_blank" >Instagram</a>
             <a>Whatsapp</a>
+            <a href="mailto:bridgeassessoriadigital@gmail.com" target="_blank">Email</a>
             <a>Linkedin</a>
-            <a>Tiktok</a>
           </div>
         </div>
       </footer>
@@ -143,13 +143,18 @@
           
         </div>
         <div class="links">
-          <a class="logo-insta"><img src="/assets/imagens/redessociais/instagram.png" alt="instalogo"></a>
+          <a  href="https://www.instagram.com/bridgeassessoriadigital/" class="logo-insta"><img src="/assets/imagens/redessociais/instagram.png" alt="instalogo" target="_blank" ></a>
           <a class="logo-whats"><img src="/assets/imagens/redessociais/whatsapp.png" alt="whatsalogo"></a>
-          <a class="logo-email"><img src="/assets/imagens/redessociais/email.png" alt="emailicon"></a>
+          <a href="mailto:bridgeassessoriadigital@gmail.com" class="logo-email" target="_blank"><img src="/assets/imagens/redessociais/email.png" alt="emailicon"></a>
         </div>
       </footer>
     </section>
-
+    
+      <!--Botão whatsapp-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<a href="#" target="_blank">
+    <div class="btn-whatsapp pulsaDelay"><i class="fa fa-whatsapp"></i></div>
+</a>
 <script src="servicos.js"></script>
 </body>
 </html>
