--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <span id="hamburguer"></span>
         </button>
         <ul id="menu" role="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="servicos/servicos.html">Serviços</a></li>
-            <li><a href="#">Projetos</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="/servicos/servicos.html">Serviços</a></li>
+            <li><a href="/projetos/projects.html">Projetos</a></li>
             <li><a href="#">Sobre nós</a></li>
             <li><a href="#">Contato</a></li>
         </ul>
