--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -30,21 +30,30 @@
    
  <div class="mvvcontainer">
   <div class="missao" id="mvvcontent" >
-    <h1>Nossa Missão</h1>
-    <p>Na Bridge Assessoria Digital, temos como missão ser a ponte que conecta empresas ao mundo digital, fornecendo soluções personalizadas que impulsionam a transformação e modernização dos negócios. Nosso compromisso é não apenas oferecer serviços, mas sim proporcionar uma jornada de crescimento e sucesso para cada cliente.
-    </p>
+    <div id="mvvtext">
+      <h1>Nossa Missão</h1>
+      <p>Na Bridge Assessoria Digital, temos como missão ser a ponte que conecta empresas ao mundo digital, fornecendo soluções personalizadas que impulsionam a transformação e modernização dos negócios. Nosso compromisso é não apenas oferecer serviços, mas sim proporcionar uma jornada de crescimento e sucesso para cada cliente.
+      </p>
+    </div>
+    <img src="/assets/imagens/icons/missaoicon.svg" alt="missão">
   </div>
 
   <div class="visao" id="mvvcontent" >
-    <h1>Nossa Visão</h1>
-    <p>Nossa visão vai além de simplesmente prestar serviços; aspiramos a construir uma comunidade de networking onde cada cliente se beneficie das conexões estabelecidas. Acreditamos que essa rede de colaboração é essencial para fortalecer e impulsionar todos os empreendimentos envolvidos. Além disso, reconhecemos a importância fundamental da presença online e nos dedicamos a capacitar nossos clientes para brilhar no cenário digital, conquistando um espaço de destaque em seus setores.
-    </p>
+    <div id="mvvtext">
+      <h1>Nossa Visão</h1>
+      <p>Nossa visão vai além de simplesmente prestar serviços; aspiramos a construir uma comunidade de networking onde cada cliente se beneficie das conexões estabelecidas. Acreditamos que essa rede de colaboração é essencial para fortalecer e impulsionar todos os empreendimentos envolvidos. Além disso, reconhecemos a importância fundamental da presença online e nos dedicamos a capacitar nossos clientes para brilhar no cenário digital, conquistando um espaço de destaque em seus setores.
+      </p>
+    </div>
+    <img src="/assets/imagens/icons/missaoicon.svg" alt="missão">
   </div>
 
   <div class="valores" id="mvvcontent" >
-    <h1>Nossos Valores</h1>
-    <p>Na Bridge Assessoria Digital, nossos valores fundamentais são o compromisso inabalável com a satisfação do cliente e a integridade em todas as nossas interações. Colocamos o cliente no centro de tudo o que fazemos, buscando sempre compreender suas necessidades e superar suas expectativas. Além disso, cultivamos uma cultura de transparência e honestidade, priorizando relacionamentos baseados na confiança mútua e na ética profissional.
-    </p>
+    <div id="mvvtext">
+      <h1>Nossos Valores</h1>
+      <p>Na Bridge Assessoria Digital, nossos valores fundamentais são o compromisso inabalável com a satisfação do cliente e a integridade em todas as nossas interações. Colocamos o cliente no centro de tudo o que fazemos, buscando sempre compreender suas necessidades e superar suas expectativas. Além disso, cultivamos uma cultura de transparência e honestidade, priorizando relacionamentos baseados na confiança mútua e na ética profissional.
+      </p>
+    </div>
+    <img src="/assets/imagens/icons/missaoicon.svg" alt="missão">
   </div>
  </div>
 
