--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="/assets/imagens/favicon.png" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     
+    
 
 </head>
  <header id="header">
@@ -20,8 +21,8 @@
         <ul id="menu" role="menu">
             <li><a href="/index.html">Home</a></li>
             <li><a href="/servicos/servicos.html">Serviços</a></li>
-            <li><a href="projects.html">Projetos</a></li>
-            <li><a href="#">Sobre nós</a></li>
+            <li><a href="/projetos/projects.html">Projetos</a></li>
+            <li><a href="sobre.html">Sobre nós</a></li>
             <li><a href="#">Contato</a></li>
         </ul>
     </nav>
@@ -44,7 +45,7 @@
       <p>Nossa visão vai além de simplesmente prestar serviços; aspiramos a construir uma comunidade de networking onde cada cliente se beneficie das conexões estabelecidas. Acreditamos que essa rede de colaboração é essencial para fortalecer e impulsionar todos os empreendimentos envolvidos. Além disso, reconhecemos a importância fundamental da presença online e nos dedicamos a capacitar nossos clientes para brilhar no cenário digital, conquistando um espaço de destaque em seus setores.
       </p>
     </div>
-    <img src="/assets/imagens/icons/missaoicon.svg" alt="missão">
+    <img src="/assets/imagens/icons/visaoicon.svg" alt="visao">
   </div>
 
   <div class="valores" id="mvvcontent" >
@@ -53,7 +54,7 @@
       <p>Na Bridge Assessoria Digital, nossos valores fundamentais são o compromisso inabalável com a satisfação do cliente e a integridade em todas as nossas interações. Colocamos o cliente no centro de tudo o que fazemos, buscando sempre compreender suas necessidades e superar suas expectativas. Além disso, cultivamos uma cultura de transparência e honestidade, priorizando relacionamentos baseados na confiança mútua e na ética profissional.
       </p>
     </div>
-    <img src="/assets/imagens/icons/missaoicon.svg" alt="missão">
+    <img src="/assets/imagens/icons/valoresicon.svg" alt="valores">
   </div>
  </div>
 
