--- a/projetos/projects.html
+++ b/projetos/projects.html
@@ -21,7 +21,7 @@
             <li><a href="/index.html">Home</a></li>
             <li><a href="/servicos/servicos.html">Serviços</a></li>
             <li><a href="projects.html">Projetos</a></li>
-            <li><a href="#">Sobre nós</a></li>
+            <li><a href="/sobre/sobre.html">Sobre nós</a></li>
             <li><a href="#">Contato</a></li>
         </ul>
     </nav>
