--- a/contato/contact.html
+++ b/contato/contact.html
@@ -41,7 +41,7 @@
       </div>
    </div>
    <div class="form">
-    <form action="#" method="post">
+    <form action="main.php" method="post">
 
     <label for="name">Nome:</label>
     <input type="text" id="nome" name="nome" required >
