--- a/projetos/projects.html
+++ b/projetos/projects.html
@@ -48,49 +48,49 @@
     </div>
 </article>
 
-<div class="projects" >
+ <div class="projects" >
         <div id="projectdestaque" class="project" >
-            <img src="/assets/imagens/projetos/destaque.jpg" alt="projectdestaque">
-            <h1>Projeto x</h1>
-            <p>Saiba mais.</p>
+            <a href="https://bridgedigital.myportfolio.com/arvoredo"><img src="/assets/imagens/projetos/destaque.jpg" alt="projectdestaque"></a>
+            <h1>Arvoredo</h1>
+            <p>Identidade Visual</p>
         </div>
 
         <div id="outhersprojects">
 
            <div id="projeto1" class="project" >
-            <img src="/assets/imagens/projetos/1.png" alt="project1">
-            <h1>Projeto x</h1>
-            <p>Saiba mais.</p>
+            <a href="https://bridgedigital.myportfolio.com/aluma-construcao"><img src="/assets/imagens/projetos/1.png" alt="project1"></a>
+            <h1>Aluma Construção</h1>
+            <p>Design Digital</p>
            </div>
 
            <div id="projeto2" class="project" >
-            <img src="/assets/imagens/projetos/2.png" alt="project2">
-            <h1>Projeto x</h1>
-            <p>Saiba mais.</p>
+            <a href="https://bridgedigital.myportfolio.com/hb-sound"><img src="/assets/imagens/projetos/2.png" alt="project2"></a>
+            <h1>Hb Sound</h1>
+            <p>Design Digital</p>
            </div>
 
            <div id="projeto3" class="project" >
-            <img src="/assets/imagens/projetos/3.png" alt="project3">
-            <h1>Projeto x</h1>
-            <p>Saiba mais.</p>
+            <a href="https://bridgedigital.myportfolio.com/germano-portas"><img src="/assets/imagens/projetos/3.png" alt="project3"></a>
+            <h1>Germano Portas</h1>
+            <p>Identidade Visual</p>
            </div>
 
            <div id="projeto4" class="project" >
-            <img src="/assets/imagens/projetos/4.png" alt="project4">
-            <h1>Projeto x</h1>
-            <p>Saiba mais.</p>
+            <a href="https://bridgedigital.myportfolio.com/arthur-reis"><img src="/assets/imagens/projetos/4.png" alt="project4"></a>
+            <h1>Arthur Reis</h1>
+            <p>Design Digital</p>
            </div>
 
            <div id="projeto5" class="project" >
-            <img src="/assets/imagens/projetos/5.png" alt="project5">
-            <h1>Projeto x</h1>
-            <p>Saiba mais.</p>
+            <a href="https://bridgedigital.myportfolio.com/tavares"><img src="/assets/imagens/projetos/5.png" alt="project5"></a>
+            <h1>Tavares</h1>
+            <p>Identidade Visual</p>
            </div>
 
            <div id="projeto6" class="project" >
-            <img src="/assets/imagens/projetos/6.png" alt="project6">
-            <h1>Projeto x</h1>
-            <p>Saiba mais.</p>
+            <a href="https://bridgedigital.myportfolio.com/merusa-gollega"><img src="/assets/imagens/projetos/6.png" alt="project6"></a>
+            <h1>Merusa Gollega</h1>
+            <p>Design Digital</p>
            </div>
         </div>
     </div>
