--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -23,7 +23,7 @@
             <li><a href="/servicos/servicos.html">Serviços</a></li>
             <li><a href="/projetos/projects.html">Projetos</a></li>
             <li><a href="sobre.html">Sobre nós</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="/contato/contact.html">Contato</a></li>
         </ul>
     </nav>
 </header>
