--- a/contato/contact.html
+++ b/contato/contact.html
@@ -22,8 +22,8 @@
             <li><a href="/index.html">Home</a></li>
             <li><a href="/servicos/servicos.html">Serviços</a></li>
             <li><a href="/projetos/projects.html">Projetos</a></li>
-            <li><a href="sobre.html">Sobre nós</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="/sobre/sobre.html">Sobre nós</a></li>
+            <li><a href="contact.html">Contato</a></li>
         </ul>
     </nav>
 </header>
