--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="/servicos/servicos.html">Serviços</a></li>
             <li><a href="/projetos/projects.html">Projetos</a></li>
             <li><a href="/sobre/sobre.html">Sobre nós</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="contato/contact.html">Contato</a></li>
         </ul>
     </nav>
 </header>
