--- a/projetos/projects.html
+++ b/projetos/projects.html
@@ -22,7 +22,7 @@
             <li><a href="/servicos/servicos.html">Serviços</a></li>
             <li><a href="projects.html">Projetos</a></li>
             <li><a href="/sobre/sobre.html">Sobre nós</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="/contato/contact.html">Contato</a></li>
         </ul>
     </nav>
 </header>
