--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -21,8 +21,8 @@
             <li><a href="/index.html">Home</a></li>
             <li><a href="/servicos/servicos.html">Serviços</a></li>
             <li><a href="/projetos/projects.html">Projetos</a></li>
-            <li><a href="#">Sobre nós</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="/sobre/sobre.css">Sobre nós</a></li>
+            <li><a href="/contato/contact.html">Contato</a></li>
         </ul>
     </nav>
 </header>
