--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
             <div id="servicostxt">
                 <h1>Serviços e Processos Estratégicos</h1>
                 <p>A Bridge adota uma abordagem meticulosa no desenvolvimento de projetos, onde cada etapa é cuidadosamente estruturada para garantir um propósito definido desde o início até a conclusão.<br> Nosso ecossistema de serviços e processos é projetado para promover uma execução objetiva, assegurando que cada fase do projeto seja conduzida de maneira eficiente e alinhada aos objetivos estratégicos da empresa.</p>
-                <h3>Conheça nossos serviços</h3>
+                <a href="/servicos/servicos.html">
+                  <h3>Conheça nossos serviços</h3>
+                </a>
             </div>
 
             <div class="loader"></div>
